# NYC_taxi_demand

./: README.md  pyproject.toml
notebooks/: 10_hyperparameters_tuning.ipynb  11_backfill_feature_store.ipynb  12_feature_pipeline.ipynb  13_model_training_pipeline copy.ipynb  13_model_training_pipeline.ipynb  1_load_data.ipynb  2_transform_data.ipynb  3_get_feature_indicies.ipynb  4_load_and_validate_data.ipynb  5_plot_transformed_data.ipynb  6_baseline_model.ipynb  7_xgboost_regresssor.ipynb  8_lightgbm_regressor.ipynb  9_lightgbm_regressor_with_feature_engineering.ipynb  model_1.pkl  testing.ipynb
src/: config.py  data.py  data_split.py  frontend - Copy.py  frontend.py  frontend_cache.py  inference.py  load_data_from_computer.py  model.py  paths.py  plot.py  testing.py
trained models/: model_1_new.pkl
